Redirect from github sites to ddr0.ca.

--- a/Candy Crunch/index.html
+++ b/Candy Crunch/index.html
@@ -1,47 +1,1 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Candy Crush</title>
-		<link rel="stylesheet" type="text/css" href="basic.css">
-		<link rel="prefetch" href="images/CC_Grid_Sprite_Sheet_v2.png">
-		
-		<!-- Shims and helpers. -->
-		<!--[if IE]>
-			<script src="list.map polyfill.js" type="text/javascript"></script>
-			<script src="list.filter polyfill.js" type="text/javascript"></script>
-			<script src="list.indexOf polyfill.js" type="text/javascript"></script>
-			<script src="list.lastIndexOf polyfill.js" type="text/javascript"></script>
-			<script src="addEventListener polyfill.js" type="text/javascript"></script>
-			<script src="console polyfill.js" type="text/javascript"></script>
-			<script src="../excanvas.compiled.js" type="text/javascript"></script>
-		<![endif]-->
-		<script src="jquery-cur.min.js"></script>
-		<script src="underscore.js" type="text/javascript"></script>
-		<script src="averageRGB.js" type="text/javascript"></script>
-		
-		<!-- Candy Crush -->
-		<script type="text/javascript" src="EaselFL/js/FLSetup.js"></script>
-		<script type="text/javascript" src="load game.js"></script>
-		<script src="htmlInterface.js" type="text/javascript"></script>
-	</head>
-	<body onload="loadGame();"> <!-- We use a sort of deferred loading thingy so we have to wait for the page to load before we start loading the game. -->
-		<h1>Candy Crush</h1>
-		<div id="game">
-			<canvas id="main" width=639 height=567 renderMethod="auto" onload="runme.call(this, this)"> <!-- Should be power of 32+1. +1 for right/bottom board edge pixel. -->
-				<p>This game will run much better (if it runs at all) in a modern browser. Get Google's <a href="https://www.google.com/intl/en/chrome/browser/">Chrome</a>!</p>
-			</canvas>
-			<script type="text/javascript" >
-				//Set up iVariables here to customize the game.
-			</script>
-			<script src="main.js" type="text/javascript"></script>
-			
-			<div class="textDisplayBorder" width=639>
-				<p id="score", class="textDisplay"> Score:</p> <!-- Non-breaking space for alignment. Fix later. -->
-				<p id="cash", class="textDisplay"> Left:</p>
-			</div>
-		</div>
-		<p>Fig. 1: Candy Crush running in normal mode.</p>
-		<p><button name="button" onclick="document.location.reload(false)">Restart Game</button></p>
-	</body>
-</html>
+<meta http-equiv="refresh" content="0;url=https://ddr0.ca/Candy Crunch/index.html" /><p>This site has moved to <a href="https://ddr0.ca/Candy Crunch/index.html">ddr0.ca</a>.<br>You should be redirected there now.<br>Or something has gone wrong.</p>
