--- a/Frogatto's Stats/scatter.html
+++ b/Frogatto's Stats/scatter.html
@@ -1,45 +1,1 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Frogatto's Standard Stats Visulizer</title>
-		<link rel="stylesheet" type="text/css" href="black.css">
-		<script src="http://code.jquery.com/jquery-latest.js"></script>
-<!-- 		<script src="http://www.theargentlark.com/dark-chess/jquery.json.js"></script> -->
-		<script src="scatter.js"></script>
-		<script type="text/javascript">$(document).ready(function() {setup()})</script>
-	</head>
-	<body style="background-color: black;">
-		<p>
-			<div style="position:fixed;">
-				<table style="background-color:#222; border-style:solid; border-width:1px;"> <!--Yeah, yeah, I'll replace the table in a bit with the right CSS or something.-->
-					<tr>
-						<td>
-							<button tabindex="2" accesskey="g" type="button" onmouseup="newGraph()" onkeypress="onEnterGraph(event)">Graph</button><br><div style="opacity:0; font-size:75%">!</div>
-						</td>
-						<td>
-							<input tabindex=1 type="text" id="filename" value="titlescreen" onkeypress="onEnterGraph(event)" required>.cfg<br><div style="font-size:75%;"><a href="level selector.html">level list</a> • <a href="error codes.html">error codes</a> • <a href="http://www.frogatto.com" target="_blank">frogatto.com</a></div>
-						<td>
-					</tr>
-					<tr>
-						<td>
-							 zoom
-						</td>
-						<td>
-							<input id="zoom" type="range" value="100" min="3" max="100" onmouseup="graph()" onkeypress="onEnterGraph(event)" onchange="scaleBackground()"/>%
-						</td>
-					</tr>
-				</table>
-				<div id="message" style="font-size:90%"></div>
-			</div>
-		</p>
-		<img id="level image" style="position:absolute; left:0px; top:0px; z-index:-2;" onload="newGraphContinue()">
-		<div id="graph" style="position:absolute; left:0px; top:0px; z-index:-1;"></div>
-	</body>
-</html>
-
-<!--
-regex for replacement of 'dir' of levels:
-search: ([1-9a-z-]*).cfg
-replace: <li><a href="\1">\1</a>
--->
+<meta http-equiv="refresh" content="0;url=https://ddr0.ca/Frogattos Stats/scatter.html /><p>This site has moved to <a href=https://ddr0.ca/Frogattos Stats/scatter.html">ddr0.ca</a>.<br>You should be redirected there now.<br>Or something has gone wrong.</p>
