--- a/Oil Drop/credits.html
+++ b/Oil Drop/credits.html
@@ -1,22 +1,1 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Oil Drop - Credits</title>
-	</head>
-	<body>
-		<h1>Oil Drop Credits</h1>
-		<p>Code:
-			<br>Game written and designed by David D. Roberts.
-			<br>Object.watch shim from https://gist.github.com/384583 by Eli Grey.
-			<br>Made using create.js and jQuery. Thanks, everyone!
-		</p>
-		<p>Artwork:
-			<br>Icons by Ails English, cc-by, available from http://opengameart.org/sites/default/files/icons34x34byailsenglish.rar.
-			<br>Flowing sound effect by Kurt.
-		</p>
-		<p>Stuff used without licence: images/
-			non-legit background.jpeg
-		</p>
-	</body>
-</html>
+<meta http-equiv="refresh" content="0;url=https://ddr0.ca/Oil Drop/credits.html" /><p>This site has moved to <a href="https://ddr0.ca/Oil Drop/credits.html">ddr0.ca</a>.<br>You should be redirected there now.<br>Or something has gone wrong.</p>
