--- a/Old CT/download linux.html
+++ b/Old CT/download linux.html
@@ -1,28 +1,1 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Cube Trains • Linux Download</title>
-		<link rel="stylesheet" type="text/css" href="css/new black.css">
-		<script src="index reflow.js"></script>
-	</head>
-	<body onLoad="mixpanel.track('download lin load');">
-		<script type="text/javascript"> //start Mixpanel
-			(function(d,c){var a,b,g,e;a=d.createElement("script");a.type="text/javascript";a.async=!0;a.src=("https:"===d.location.protocol?"https:":"http:")+'//api.mixpanel.com/site_media/js/api/mixpanel.2.js';b=d.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b);c._i=[];c.init=function(a,d,f){var b=c;"undefined"!==typeof f?b=c[f]=[]:f="mixpanel";g="disable track track_pageview track_links track_forms register register_once unregister identify name_tag set_config".split(" ");
-			for(e=0;e<g.length;e++)(function(a){b[a]=function(){b.push([a].concat(Array.prototype.slice.call(arguments,0)))}})(g[e]);c._i.push([a,d,f])};window.mixpanel=c})(document,[]);
-			mixpanel.init("fa690803d8c9479ed96635dd52ea1837");
-		mixpanel.track_links("a#deb-download",			"deb download",				{'referrer': document.referrer });
-		mixpanel.track_links("a#ebuild-download",		"ebuild download",			{'referrer': document.referrer });
-		mixpanel.track_links("a#source-download",		"source download",			{'referrer': document.referrer });
-		</script> <!-- end Mixpanel -->
-		<h1>Linux Download</h1>
-		<p>There are seveal direct download options available to linux users. Cube Trains may (or may not) be found in your package manager as well.</p>
-		<h2>32-bit .deb</h2>
-		<a id="deb-download" class="shinyButtonTiny" href = "files/release/linux/cubetrains_0.2-1_i386.deb">cubetrains_0.2.1-1_i386.deb</a>
-		<h2>Gentoo ebuild</h2>
-		<a id="ebuild-download" class="shinyButtonTiny" href = "files/release/linux/cubetrains-0.2.1.ebuild">cubetrains-0.2.1.ebuild</a>
-		<h2>Source Code</h2>
-		<a id="source-download" class="shinyButtonTiny" href="https://github.com/DDR0/Cube_Trains/zipball/0.2.1">Cube Trains 0.2.1.zip</a>
-		<br><p>To compile the source code, follow the <a href="linux compiling guide.html">compiling guide</a>.</p>
-	</body>
-</html>
+<meta http-equiv="refresh" content="0;url=https://ddr0.ca/Old CT/download linux.html" /><p>This site has moved to <a href="https://ddr0.ca/Old CT/download linux.html">ddr0.ca</a>.<br>You should be redirected there now.<br>Or something has gone wrong.</p>
