--- a/Old CT/index-old.html
+++ b/Old CT/index-old.html
@@ -1,52 +1,1 @@
-﻿<!doctype html>
-<html lang="en">
-	<script type="text/javascript"> //start Mixpanel
-		(function(d,c){var a,b,g,e;a=d.createElement("script");a.type="text/javascript";a.async=!0;a.src=("https:"===d.location.protocol?"https:":"http:")+'//api.mixpanel.com/site_media/js/api/mixpanel.2.js';b=d.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b);c._i=[];c.init=function(a,d,f){var b=c;"undefined"!==typeof f?b=c[f]=[]:f="mixpanel";g="disable track track_pageview track_links track_forms register register_once unregister identify name_tag set_config".split(" ");
-		for(e=0;e<g.length;e++)(function(a){b[a]=function(){b.push([a].concat(Array.prototype.slice.call(arguments,0)))}})(g[e]);c._i.push([a,d,f])};window.mixpanel=c})(document,[]);
-		mixpanel.init("fa690803d8c9479ed96635dd52ea1837");
-		
-		mixpanel.track_links("a#mac-download",			"mac download",				{'referrer': document.referrer });
-		mixpanel.track_links("a#windows-download",		"windows download",			{'referrer': document.referrer });
-		mixpanel.track_links("a#windows-download-64",	"windows download 64-bit",	{'referrer': document.referrer });
-		mixpanel.track_links("a#deb-download",			"deb download",				{'referrer': document.referrer });
-		mixpanel.track_links("a#ebuild-download",		"ebuild download",			{'referrer': document.referrer });
-		mixpanel.track_links("a#source-download",		"source download",			{'referrer': document.referrer });
-	</script> <!-- end Mixpanel -->
-	<head>
-		<meta charset="utf-8">
-		<title>Cube Trains</title>
-		<link rel="stylesheet" type="text/css" href="css/basic black.css">
-	</head>
-	<body onLoad="mixpanel.track('index load')">
-		<div id="left-img"></div>
-		<div id="content">
-			<h1>CUBE TRAINS</h1>
-			
-			<p id="proper">Solve routing puzzles in a dense city with Cube Trains. You start off as a young urban planner trying to connect a city's fragmented rail lines together, and work your way up to become an old urban planner trying to connect a city's fragmented rail lines together! Over the course of your career, you'll build towering structures, beautiful bridges, and some truly convoluted infrastructure. Download the beta below, for free. Also, <a href="media.html">pictures.</a> Coming summer 2012. Yours for the price of two Canadian dollars.</p>
-			
-			<p id="ul-header">Features:</p>
-			<ul>
-				<li><font color="lime">☑</font> Puzzles in three dimensions.</li>
-				<li><font color="yellow">☐</font> Twenty reasonably unique levels.</li>
-				<li><font color="lime">☑</font> Undo/redo.</li>
-				<li><font color="lime">☑</font> Individual level saving.</li>
-				<li><font color="lime">☑</font> Colourblind mode.</li>
-			</ul>
-			
-			<p id="proper">Release Notes: The bug with Cube Trains using the same save slot as Frogatto has been fixed. The window has been made slightly shorter so it will fit on 1024x768 monitors, but resizability still isn't available. The main-map is more reliable now. However, some new bugs have been introduced. On some Linux systems, copying the current level will not work. You have to load the level in some form in the editor before you can rotate it, if you've reset the level. Some new features have been added, too. An editor has been made, so you can make your own levels now! There is also an easy level after the tutorial-2 level, since the learning curve was a bit steep before. Enjoy!
-			</p><p>
-			<br><b>Macintosh:</b> <a id="mac-download" href="files/release/mac/Cube Trains 0.2.1.zip">Cube Trains 0.2.1.zip</a>
-			<br><b>Windows:</b> 32-bit version <a id="windows-download" href = "files/release/win/Cube Trains 0.2.1.zip">Cube Trains 0.2.1.zip</a> – 64-bit version <a id="windows-download-64" href = "files/release/win/Cube Trains 0.2.1 64-bit.zip">Cube Trains 0.2.1 64-bit.zip</a>
-			<br><b>Linux:</b> Gentoo ebuild <a id="ebuild-download" href = "files/release/linux/cubetrains-0.2.1.ebuild">cubetrains-0.2.1.ebuild</a> – 32-bit .deb <a id="deb-download" href = "files/release/linux/cubetrains_0.2-1_i386.deb">cubetrains_0.2.1-1_i386.deb</a>
-			<br><i>If you have Layman, you can simply do "layman -a hasufell" and emerge Cube Trains from this overlay.</i>
-			<br><b>Source Code:</b> <a id="source-download" href="https://github.com/DDR0/Cube_Trains/zipball/0.2.1">Cube Trains 0.2.1.zip</a>
-			<br><i>This doubles as the general linux download. It does not contain an executable file, but you can make your own by following <a href="linux compiling guide.html">the instructions.</a></i></p>
-			<hr>
-			
-			<p id="proper">Feedback? <a href="mailto:robertsdavidddr@gmail.com">Email me</a>. <a href="irc://freenode/frogatto">Talk with me</a> on <a href="http://en.wikipedia.org/wiki/Internet_Relay_Chat">IRC</a>. Visit <a href="http://www.frogatto.com/forum/index.php">the Frogatto forums</a>. I'd like to hear what you think, and not in a 'please stay on the line, your call is important to us' way.</p>
-			
-		</div>
-		<div id="right-img" style="overflow: hidden;"></div>
-	</body>
-</html>
-<!--note to self - add hagabaka and krista to credits-->
+<meta http-equiv="refresh" content="0;url=https://ddr0.ca/Old CT/index-old.html" /><p>This site has moved to <a href="https://ddr0.ca/Old CT/index-old.html">ddr0.ca</a>.<br>You should be redirected there now.<br>Or something has gone wrong.</p>
