--- a/Old CT/index.html
+++ b/Old CT/index.html
@@ -1,17 +1,1 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="Refresh" content="0; url=http://cubetrains.com">
-		<title>Cube Trains</title>
-		<link rel="stylesheet" type="text/css" href="css/new black.css">
-	</head>
-	<body onLoad="mixpanel.track('github load'); window.open('http://cubetrains.com','_self');">
-		<script type="text/javascript"> //start Mixpanel
-			(function(d,c){var a,b,g,e;a=d.createElement("script");a.type="text/javascript";a.async=!0;a.src=("https:"===d.location.protocol?"https:":"http:")+'//api.mixpanel.com/site_media/js/api/mixpanel.2.js';b=d.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b);c._i=[];c.init=function(a,d,f){var b=c;"undefined"!==typeof f?b=c[f]=[]:f="mixpanel";g="disable track track_pageview track_links track_forms register register_once unregister identify name_tag set_config".split(" ");
-			for(e=0;e<g.length;e++)(function(a){b[a]=function(){b.push([a].concat(Array.prototype.slice.call(arguments,0)))}})(g[e]);c._i.push([a,d,f])};window.mixpanel=c})(document,[]);
-			mixpanel.init("fa690803d8c9479ed96635dd52ea1837");
-		</script> <!-- end Mixpanel -->
-		<p>Cube Trains has been relocated to <a href="http://cubetrains.com">cubetrains.com</a>. You should have been redirected automatically, but... eh, here you are.</p>
-	</body>
-</html>
+<meta http-equiv="refresh" content="0;url=https://ddr0.ca/Old CT/index.html" /><p>This site has moved to <a href="https://ddr0.ca/Old CT/index.html">ddr0.ca</a>.<br>You should be redirected there now.<br>Or something has gone wrong.</p>
