--- a/Old CT/linux compiling guide.html
+++ b/Old CT/linux compiling guide.html
@@ -1,29 +1,1 @@
-﻿<!doctype html>
-<html lang="en">
-	<script type="text/javascript"> //start Mixpanel
-		(function(d,c){var a,b,g,e;a=d.createElement("script");a.type="text/javascript";a.async=!0;a.src=("https:"===d.location.protocol?"https:":"http:")+'//api.mixpanel.com/site_media/js/api/mixpanel.2.js';b=d.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b);c._i=[];c.init=function(a,d,f){var b=c;"undefined"!==typeof f?b=c[f]=[]:f="mixpanel";g="disable track track_pageview track_links track_forms register register_once unregister identify name_tag set_config".split(" ");
-		for(e=0;e<g.length;e++)(function(a){b[a]=function(){b.push([a].concat(Array.prototype.slice.call(arguments,0)))}})(g[e]);c._i.push([a,d,f])};window.mixpanel=c})(document,[]);
-		mixpanel.init("fa690803d8c9479ed96635dd52ea1837");
-	</script> <!-- end Mixpanel -->
-	<head>
-		<meta charset="utf-8">
-		<title>Cube Trains</title>
-		<link rel="stylesheet" type="text/css" href="css/basic black.css">
-	</head>
-	<body onLoad="mixpanel.track('compiling guide load')">
-		<div id="left-img"></div>
-		<div id="content">
-			<h1>COMPILING</h1>
-			<h2>Linux Quick-Guide</h2>
-			<p> Attention, Arch Linux users. To compile, you will need to replace the contents of your makefile <a href=https://raw.github.com/frogatto/frogatto/2b363df8360e641759469ec63eb4602011360d65/Makefile-safe>with this</a>. (Makefiles can be opened with any text editor, btw.)</p>
-			<h3>Steps</h3>
-			<p> ① Paste into a console (aka "Terminal"), "sudo apt-get install ccache libboost-dev libboost-regex-dev libboost-system-dev libglew1.5-dev libsdl-image1.2-dev libsdl-mixer1.2-dev libsdl-ttf2.0-dev libsdl1.2-dev libz-dev libpng12-dev" and hit enter. This will install the dependancies of the game.</p>
-			<p> ② If you are not already in the Cube Trains folder (it'll have a file called "makefile"), navigate there with the "cd" command.</p>
-			<p> ③ Next, run the "make" command there. This will compile the game. If it doesn't say "ERROR", then all is good. (It will print a bunch of stuff like "ccache g++ -DIMPLEMENT_SAVE_PNG -fno-inline-functions -g -O2 -fno-inline-functions bla bla bla". Don't worry, that means it's working.) If you still get an error, contact me (details on main page) and we'll try to figure out what's wrong.</p>
-			<p> ④ Run the game with "./game". If everything is working right, you should see the game start up. Have fun!</p>
-			<!--<h3>Errors</h3>
-			<p> ① Try running, in console, "make -f Makefile-safe" instead of "make", in step ③. This will try compiling Frogatto using only one core.</p>-->
-		</div>
-		<div id="right-img" style="overflow: hidden;"></div>
-	</body>
-</html>
+<meta http-equiv="refresh" content="0;url=https://ddr0.ca/Old CT/linux compiling guide.html" /><p>This site has moved to <a href="https://ddr0.ca/Old CT/linux compiling guide.html">ddr0.ca</a>.<br>You should be redirected there now.<br>Or something has gone wrong.</p>
