--- a/Old CT/media.html
+++ b/Old CT/media.html
@@ -1,51 +1,1 @@
-﻿<!doctype html>
-<!--.html needed in name or won't render-->
-<html lang="en">
-	<script type="text/javascript"> //start Mixpanel
-		(function(d,c){var a,b,g,e;a=d.createElement("script");a.type="text/javascript";a.async=!0;a.src=("https:"===d.location.protocol?"https:":"http:")+'//api.mixpanel.com/site_media/js/api/mixpanel.2.js';b=d.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b);c._i=[];c.init=function(a,d,f){var b=c;"undefined"!==typeof f?b=c[f]=[]:f="mixpanel";g="disable track track_pageview track_links track_forms register register_once unregister identify name_tag set_config".split(" ");
-		for(e=0;e<g.length;e++)(function(a){b[a]=function(){b.push([a].concat(Array.prototype.slice.call(arguments,0)))}})(g[e]);c._i.push([a,d,f])};window.mixpanel=c})(document,[]);
-		mixpanel.init("fa690803d8c9479ed96635dd52ea1837");
-	</script> <!-- end Mixpanel -->
-	<head>
-		<meta charset="utf-8">
-		<title>Cube Trains</title>
-		<link rel="stylesheet" type="text/css" href="css/basic black.css">
-	</head>
-	<body onLoad="mixpanel.track('media load')">
-		<div id="left-img"></div>
-		<div id="content">
-			<h1>MEDIA</h1>
-			<h2>Videos</h2>
-			<p>Newest videos first. View on youtube for larger HD version.</p>
-			<iframe width="400" height="255" src="http://www.youtube.com/embed/videoseries?list=PL5845FD4D684EB568&amp;hl=en_US" frameborder="0" allowfullscreen></iframe>
-			<p>Also of interest: <a href="https://vimeo.com/48185072">Live Image Reloading with Cube Trains</a></p>
-			<h2>Pictures</h2>
-			<p>Newer pictures near the top. Click to enlarge. Not all the pictures are from current version.</p>
-			<p>
-				<div style="float:left; width:50%">
-					<a href="images/snapshot12.png"><img src="images/snapshot12.png" width=100%/></a>
-					<br>Testing new graphics.</div>
-				<div style="float:left; width:50%">
-					<a href="images/snapshot11.png"><img src="images/snapshot11.png" width=100%/></a>
-					<br>New UI graphics.</div>
-				<div style="float:left; width:50%">
-					<a href="images/Screenshot-Frogatto-61.png"><img src="images/Screenshot-Frogatto-61.png" width=100%/></a>
-					<br>Tutorial #1, again.</div>
-				<div style="float:left; width:50%">
-				<a href="images/Screenshot-Frogatto-60.png"><img src="images/Screenshot-Frogatto-60.png" width=100%/></a>
-					<br>The main map.</div>
-				<div style="float:left; width:50%">
-				<a href="images/Screenshot-Frogatto-56.png"><img src="images/Screenshot-Frogatto-56.png" width=100%/></a>
-					<br>The effect of depth.</div>
-				<div style="float:left; width:50%">
-				<a href="images/Screenshot-Frogatto-48.png"><img src="images/Screenshot-Frogatto-48.png" width=100%/></a>
-					<br>Good transparency is needed.</div>
-				<div style="float:left; width:50%">
-				<a href="images/Screenshot-Frogatto-39.png"><img src="images/Screenshot-Frogatto-39.png" width=100%/></a>
-					<br>Tutorial #1</div>
-			</p>
-			<!--<p id="proper">Not all the pictures are from current version.</p>-->
-		</div>
-		<div id="right-img" style="overflow: hidden;"></div>
-	</body>
-</html>
+<meta http-equiv="refresh" content="0;url=https://ddr0.ca/Old CT/media.html" /><p>This site has moved to <a href="https://ddr0.ca/Old CT/media.html">ddr0.ca</a>.<br>You should be redirected there now.<br>Or something has gone wrong.</p>
