--- a/blog-posts/01.The_Start_at_the_End.html
+++ b/blog-posts/01.The_Start_at_the_End.html
@@ -1,32 +1,1 @@
-<!DOCTYPE html>
-<html lang='en'>
-	<head>
-		<meta charset='utf-8'>
-		<title>The_Start_at_the_End</title>
-		<link href='/css/grey-and-blue.css' rel='stylesheet'>
-		<meta name="theme-color" content="#3377FF">
-		<link href='/css/blog.css' rel='stylesheet'>
-		<link rel="alternate" type="application/rss+xml" title="DDR's Blog" href="/blog-rss-feed.xml" />
-	</head>
-	<body>
-		<a href='#content' id='skip-nav'>skip nav</a>
-		<div id='content-holder'>
-			<div id="content-header">
-				<div id='badge'><a href="/blog.html"><img alt='' src='/images/icons/page.svg'></a></div>
-				<h1><img alt='blog' src='/images/text-blog.png'></h1>
-				<div id='icon-bar'>
-					<a href='/blog.html'    ><img src='/images/icons/page.svg' ><span>blog</span></a>
-					<a href='/gallery.html' ><img src='/images/icons/work.svg' ><span>gallery</span></a>
-					<a href='/contact.html' ><img src='/images/icons/chat2.svg'><span>contact</span></a>
-					<a href='/rss.xml'                                                               ><img src='/images/icons/rss.svg'  ><span>rss</span></a>
-				</div>
-			</div>
-			<a name='content'></a>
-			<div id='content-pane'>
-				<h2><a href="01.The_Start_at_the_End.html">The Start</a></h2>
-				<p>This is the start of the blog. That's all there is, there is no more.</p>
-			</div>
-		</div>
-	</body>
-	<footer>Site ©2020 DDR.</footer>
-</html>
+<meta http-equiv="refresh" content="0;url=https://ddr0.ca/blog-posts/01.The_Start_at_the_End.html" /><p>This site has moved to <a href="https://ddr0.ca/blog-posts/01.The_Start_at_the_End.html">ddr0.ca</a>.<br>You should be redirected there now.<br>Or something has gone wrong.</p>
