--- a/blog-posts/03.CreateJS_Examples/3-0 Resize.html
+++ b/blog-posts/03.CreateJS_Examples/3-0 Resize.html
@@ -1,78 +1,1 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Example 3-0: Resizing</title>
-		<meta charset="utf-8">
-		<script src="createjs-2013.05.14.min.js"></script>
-		<style>
-			body {
-				margin: 0; /*Since the example is normally embedded *somewhere*, we have to remove some implicit padding.*/
-			}
-			div {
-				background-color: black;
-				overflow: hidden; /*Make the div resizable.*/
-				resize: both;
-				width: 275px;
-				height: 200px;
-				position: relative; /*Make #instructions positionable in the corner.*/
-			}
-			#output {
-				pointer-events: none; /*This would cover up our resizing handle otherwise.*/
-				width: 100%;
-				height: 100%;
-			}
-			#instructions {
-				pointer-events: none;
-				color: white;
-				font-family: Arial;
-				font-size: 10px;
-				position: absolute; /*Position the instructions in the corner with the drag handle.*/
-				margin: 0px;
-				bottom: 5px;
-				right: 5px;
-			}
-		</style>
-	</head>
-	<body>
-		<div id="container">
-			<p id="instructions">Drag me! ⬎</p>
-			<canvas id="output" width=275 height=200></canvas>
-		</div>
-		<script>
-			"use strict";
-			var stage = new createjs.Stage("output");
-
-			var circle = new createjs.Shape();
-			circle.graphics //Draw a circle with a line through it.
-				.beginFill("white")
-				.drawCircle(0,0,50)
-				.beginStroke("black")
-				.moveTo(-50,0)
-				.lineTo(+50,0)
-				.endStroke();
-			circle.x = 100;
-			circle.y = 100;
-			stage.addChild(circle);
-			
-			createjs.Ticker.addEventListener("tick", function paintStage() {
-			circle.rotation += 1; //Rotate the circle so we can see how often we're running our logic.
-				stage.update();
-			});
-			
-			function resizeStage(width, height) {
-				stage.canvas.width = width, stage.canvas.height = height;
-			};
-			
-			//Watch for our parent container getting resized. (There is no native event for this.)
-			var element = document.getElementById("container");
-			window.addEventListener("mousemove", function pollSize(event) { //We'll watch for the mouse being moved, and check if the mouse is resizing the container.
-				var newWidth = parseInt(element.style.width) || stage.canvas.width; //Style.width and style.height aren't set until we resize the container in that direction, so we might legitimately have to resize x to something while y is undefined.
-				var newHeight = parseInt(element.style.height) || stage.canvas.height;
-				if(newWidth !== stage.canvas.width || newHeight !== stage.canvas.height) {
-					resizeStage(newWidth, newHeight); };
-			});
-			
-			stage.update();
-		</script>
-	</body>
-</html>
+<meta http-equiv="refresh" content="0;url=https://ddr0.ca/blog-posts/03.CreateJS_Examples/3-0 Resize.html" /><p>This site has moved to <a href="https://ddr0.ca/blog-posts/03.CreateJS_Examples/3-0 Resize.html">ddr0.ca</a>.<br>You should be redirected there now.<br>Or something has gone wrong.</p>
