--- a/blog-posts/03.CreateJS_Examples/4-0 DOM Interface.html
+++ b/blog-posts/03.CreateJS_Examples/4-0 DOM Interface.html
@@ -1,109 +1,1 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Example 4-0: DOM Interface</title>
-		<meta charset="utf-8">
-		<script src="createjs-2013.05.14.min.js"></script>
-		<style>
-			body {
-				margin: 0; /*Since the example is normally embedded *somewhere*, we have to remove some implicit padding.*/
-			}
-			#speech-bubble { /*A grey speech-bubble.*/
-				background-color: lightgrey;
-				position: absolute; /*Make bubble repositionable.*/
-				display: inline-block;
-				border-radius: 7.5px;
-				padding: 7.5px;
-				margin-left: 0px; /*These will get set from the Javascript.*/
-				margin-top: 0px;
-				border: 1px solid darkgrey;
-			}
-			#speech-bubble:after { /*Give the speech bubble a triangular point.*/
-				content: "";
-				position: absolute;
-				left: 50%; /*Center the triagle.*/
-				margin-left: -15px; /*Give the triangle a negative margin of half the triangle width, so the triangle is centered.*/
-				bottom: -15px; /*Make a triangle 15px high and offset it downwards by that much.*/
-				border-width: 15px 15px 0;
-				border-style: solid;
-				border-color: lightgrey transparent;
-			}
-			canvas {
-				outline: 1px solid black;
-				cursor: move;
-			}
-		</style>
-	</head>
-	<body>
-		<div id="speech-bubble">
-			What's your name?<br>
-			<input id="name" onkeypress="if(event.which === 13) getName()"></input> <button onclick="getName()">OK</button>
-		</div>
-		<canvas id="output" width=300 height=200></canvas>
-		<script>
-			"use strict";
-			var stage = new createjs.Stage("output");
-			createjs.Ticker.addEventListener("tick", function paintStage() {
-				stage.update(); });
-			
-			//Create a new player. He's draggable with the mouse.
-			var playerSpriteSheet = new createjs.SpriteSheet({
-				images: ["images/frogatto.png"], //A simplified edition of Frogatto, from Frogatto & Friends. Used with permission.
-				frames: [
-					//[x, y, width, height, imageIndex, regX, regY]
-					[124,18,32,32,0,16,31], //Idle animation.
-					[159,18,32,32,0,16,31],
-					[194,18,32,32,0,16,31],
-				],
-				animations: { //Refer to http://www.createjs.com/Docs/EaselJS/classes/SpriteSheet.html for documentation.
-					idle: { //We will use an idle animation for this example, to give it some life.
-						frames:[0,1,2,1],
-						frequency: 6,
-						next: "idle",
-					},
-				}
-			});
-			
-			var player = new createjs.BitmapAnimation(playerSpriteSheet);
-			player.gotoAndPlay('idle');
-			player.x = 150, player.y = 150;
-			stage.addChild(player);
-			
-			player.onPress = function(event) {
-				var offset = { //Capture the offset of the mouse click relative to the player.
-					x: event.target.x - event.stageX, 
-					y: event.target.y - event.stageY,
-				};
-				event.onMouseMove = function(event) { //During this click, when we move the mouse, update the player position and the speech bubble position.
-					event.target.x = event.stageX + offset.x;
-					event.target.y = event.stageY + offset.y;
-					repositionSpeechBubble(event.target);
-					stage.update(); //Update the stage early to synch with user input better. This does make the player animation play faster, however.
-				}
-			}
-			
-			//Position the speech bubble HTML element above 
-			var speechBubble = document.getElementById("speech-bubble");
-			
-			function calculateSpeechBubbleOffset() { //We don't have access (that I know about) from CSS to calculate 'half our width' as a margin value. This is essentially a regX/regY value for the DOM speech bubble, which makes later positioning easier and faster.
-				speechBubble.style.marginLeft = -speechBubble.offsetWidth/2+"px";
-				speechBubble.style.marginTop = -speechBubble.offsetHeight+"px";
-			}
-			calculateSpeechBubbleOffset();
-			
-			function repositionSpeechBubble(object) {
-				object = player.localToGlobal(0,-48); //The offset of the speech bubble point from our regX/regY point.
-				speechBubble.style.left = object.x + 'px',
-				speechBubble.style.top = object.y + 'px';
-				calculateSpeechBubbleOffset();
-			}
-			repositionSpeechBubble(player);
-			
-			function getName() {
-				var name = document.getElementById("name").value;
-				document.getElementById("speech-bubble").innerHTML = "Hello, "+name+".";
-				calculateSpeechBubbleOffset();
-			}
-		</script>
-	</body>
-</html>
+<meta http-equiv="refresh" content="0;url=https://ddr0.ca/blog-posts/03.CreateJS_Examples/4-0 DOM Interface.html" /><p>This site has moved to <a href="https://ddr0.ca/blog-posts/03.CreateJS_Examples/4-0 DOM Interface.html">ddr0.ca</a>.<br>You should be redirected there now.<br>Or something has gone wrong.</p>
