--- a/cube trains/download mac.html
+++ b/cube trains/download mac.html
@@ -1,25 +1,1 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Cube Trains</title>
-		<link rel="shortcut icon" href="/images/favicon.png">
-		<link rel="stylesheet" type="text/css" href="css/black.css">
-		<link rel="stylesheet" type="text/css" href="css/download.css">
-	</head>
-	<body onLoad="mixpanel.track('download mac load');">
-		<script type="text/javascript"> //start Mixpanel
-			(function(d,c){var a,b,g,e;a=d.createElement("script");a.type="text/javascript";a.async=!0;a.src='https://api.mixpanel.com/site_media/js/api/mixpanel.2.js';b=d.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b);c._i=[];c.init=function(a,d,f){var b=c;"undefined"!==typeof f?b=c[f]=[]:f="mixpanel";g="disable track track_pageview track_links track_forms register register_once unregister identify name_tag set_config".split(" ");
-			for(e=0;e<g.length;e++)(function(a){b[a]=function(){b.push([a].concat(Array.prototype.slice.call(arguments,0)))}})(g[e]);c._i.push([a,d,f])};window.mixpanel=c})(document,[]);
-			mixpanel.init("fa690803d8c9479ed96635dd52ea1837");
-		mixpanel.track_links("a#mac-download",			"mac download",				{'referrer': document.referrer });
-		</script> <!-- end Mixpanel -->
-		<div id="body">
-			<h1>Macintosh Download</h1>
-			<p style="text-align: center;">•  <a href="media.html">Screenshots</a>  •  <a href="index.html">Main Page</a>  •  <a href="index.html#Credits">Credits</a>  •<p>
-			<p style="text-align: center;">
-				<a id="mac-download" class="shinyButton" href="https://ddr0.ca/files/release/mac/Cube Trains 1.0.0.zip">Cube Trains 1.0.0.zip</a>
-			</p>
-		</div>
-	</body>
-</html>
+<meta http-equiv="refresh" content="0;url=https://ddr0.ca/cube trains/download mac.html" /><p>This site has moved to <a href="https://ddr0.ca/cube trains/download mac.html">ddr0.ca</a>.<br>You should be redirected there now.<br>Or something has gone wrong.</p>
