--- a/cube trains/index.html
+++ b/cube trains/index.html
@@ -1,105 +1,1 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Cube Trains</title>
-		<link rel="shortcut icon" href="/images/favicon.png">
-		<link rel="stylesheet" type="text/css" href="css/black.css">
-		<meta property="og:title" content="Cube Trains" />
-		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://ddr0.ca/cube trains" />
-		<meta property="og:description" content="Cube Trains is a free puzzle game where you build elevated railways in a city. It features 3D puzzles and an editor. Open source." />
-		<meta property="og:image" content="https://ddr0.ca/cube trains/images/screenshot%20gallery/snapshot12.jpeg" />
-		<meta property="og:image:type" content="image/jpeg" />
-		<meta property="og:image:width" content="808" />
-		<meta property="og:image:height" content="626" />
-		<meta property="og:image" content="https://ddr0.ca/cube trains/images/screenshot%20gallery/snapshot11.jpeg" />
-		<meta property="og:image:type" content="image/jpeg" />
-		<meta property="og:image:width" content="808" />
-		<meta property="og:image:height" content="626" />
-		<meta property="og:image" content="https://ddr0.ca/cube trains/images/ct-logo-tiny.png" />
-		<meta property="og:image:type" content="image/png" />
-		<meta property="og:image:width" content="250" />
-		<meta property="og:image:height" content="250" />
-	</head>
-	<body onLoad="mixpanel.track('index load');">
-		<script type="text/javascript"> //start Mixpanel
-			(function(d,c){var a,b,g,e;a=d.createElement("script");a.type="text/javascript";a.async=!0;a.src='https://api.mixpanel.com/site_media/js/api/mixpanel.2.js';b=d.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b);c._i=[];c.init=function(a,d,f){var b=c;"undefined"!==typeof f?b=c[f]=[]:f="mixpanel";g="disable track track_pageview track_links track_forms register register_once unregister identify name_tag set_config".split(" ");
-			for(e=0;e<g.length;e++)(function(a){b[a]=function(){b.push([a].concat(Array.prototype.slice.call(arguments,0)))}})(g[e]);c._i.push([a,d,f])};window.mixpanel=c})(document,[]);
-			mixpanel.init("fa690803d8c9479ed96635dd52ea1837");
-			mixpanel.track_links("a#source-download",		"source download",			{'referrer': document.referrer });
-			mixpanel.track_links("a#mac-download",			"mac download",				{'referrer': document.referrer });
-		</script> <!-- end Mixpanel -->
-		<div id="body">
-			<h1><img
-				src="images/ct-logo-tiny.png" 
-				width=250 height=250 
-				alt="Cube Trains"
-				style="margin-top: -30px;"
-				></h1>
-			<p style="text-align: center;">•  <a href="media.html">Screenshots</a>  •  <a href="#Downloads">Download</a>  •  <a href="#Credits">Credits</a>  •<p>
-			<h2>Introduction</h2>
-			<p>Cube Trains is a free puzzle game where you build elevated railways in a city. It features 3D puzzles, unlimited undo/redo, and smart placement of pieces. The non-linear level graph means you don't have to beat a level before unlocking the next one. The game comes with a built-in level editor, so you can build and share your own corners of the city.</p>
-			<h2><a name="Downloads"></a>Downloads</h2>
-			<p>Download Cube Trains for:<p>
-			<div class="buttonContainer">
-				<a class="shinyButton" href="download linux.html">Linux</a>
-				<p class="buttonSubtext">version 1.0.0</p>
-			</div>
-			<div class="buttonContainer">
-				<a class="shinyButton" id="mac-download" href="https://ddr0.ca/files/release/mac/Cube Trains 1.0.0.zip">Macintosh</a>
-				<p class="buttonSubtext">version 1.0.0</p>
-			</div>
-			<div class="buttonContainer">
-				<a class="shinyButton" href="download windows.html">Windows</a>
-				<p class="buttonSubtext">version 1.0.0</p>
-			</div>
-			<div style="clear: both;"></div>
-			<!-- <p>All releases, including previous versions, can be found <a href="files/release/"> here</a>.</p> -->
-			<!--<p>Changelog: Updated graphics. Fixed zordering bugs. Multiple glitches fixed. Editor and player added. Added some music and sound effects. Improved mouse controls.</p>-->
-			<p>The <a id="source-download" href="https://github.com/frogatto/frogatto/archive/ct-1.0.0.zip">source</a> code and assets are available from the <a href="https://github.com/frogatto/frogatto/tree/ct-1.0.0-exp1">frogatto github project</a>. (Note: The module does not need Anura to run. It is comes with its own custom version of the game engine.)</p>
-			
-			<h2>Expansion Pack</h2>
-			<p>Buy the expansion pack and show support for Cube Trains! Get 11 more levels and a water tile for the editor. Absolutely no copy protection or DRM, now or ever.</p>
-			<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-				<input type="hidden" name="cmd" value="_xclick">
-				<input type="hidden" name="business" value="VB8QJ7V9JU9XE">
-				<input type="hidden" name="lc" value="CA">
-				<input type="hidden" name="item_name" value="Cube Trains Expansion Pack">
-				<input type="hidden" name="item_number" value="1">
-				<input type="number" name="amount" value="2.00" min="2" step="any" oninput="if((parseInt(this.value) < 2 || parseInt(this.value) != parseInt(this.value)) && this.value != '') {this.value='2.00'}" onblur="if((parseInt(this.value) < 2 || parseInt(this.value) != parseInt(this.value))) {this.value='2.00'}">
-				<input type="hidden" name="currency_code" value="CAD">
-				<p class="buttonSubtext" style="margin:3px;">Payment amount, in Canadian Dollars. $2.00 minimum, please. Tips appreciated.</p>
-				<input type="hidden" name="return" value="https://ddr0.ca/cube%20trains/download%20expansion%201.html">
-				<input type="hidden" name="button_subtype" value="services">
-				<input type="hidden" name="bn" value="PP-BuyNowBF:btn_buynow_LG.gif:NonHosted">
-				<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-				<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-			</form>
-			If anything goes wrong, please <a href="#Contact">contact me</a> and we'll get it all sorted out.
-			
-			
-
-			<h2>Media</h2>
-			<iframe width="100%" height="315" src="https://www.youtube.com/embed/zWdzu8BNZMw?list=PL5845FD4D684EB568&amp;hl=en_US" frameborder="0" allowfullscreen></iframe>
-			<p>A short LP in German: <a href="https://www.youtube.com/watch?v=66c_g69f-6I">Angespielt: Cube Trains</a></p>
-			<p><a href="media.html">Screenshots and OST</a> are also available.</p>
-			<h2><a name="Contact"></a>Contact</h2>
-			<p>Cube Trains does not collect personally identifying data, nor data that could be turned into personally identifying data. <!--Usage data from the game is truly anonymous. In addition, stats reporting can be turned off with the command-line option "--no-send-stats", but I like getting stats. They're fun.--></p>
-			<p id="proper">If you'd like to make yourself known, please post on the <a href="https://www.frogatto.com/forum">Cube Trains Forums</a>. You can also <a href="mailto:robertsdavidddr@gmail.com">email</a> me, the programmer, or contact <a href="irc://freenode/DDR,isnick">me</a> via <a href="https://en.wikipedia.org/wiki/Irc">IRC</a> on <a href="irc://freenode/cubetrains">#cubetrains</a>. If you have a problem, I want to hear about it so I can fix it! Feedback is always welcome - I like to talk about my stuff!</p>
-			<h2><a name="Credits"></a>Credits</h2>
-			<ul>
-				<li>Developer: David D. Roberts (DDR)</li>
-				<li>Music: Ryan Reilly (Rain)</li>
-				<li>Anura Engine Creation & Improvement: David White (Sirp)</li>
-				<li>Anura Engine Improvement: Kristina Simpson (Krista)</li>
-				<li>Consulting: Richard Kettering (Jetrel)</li>
-				<li>SFX Consulting: Adam Rinsky (ActionJack)</li>
-			</ul>
-			<h2>Legal Stuff (EULA)</h2>
-			<p>This site (and game) is released under the same license as Cube Trains, which is the same license as Frogatto & Friends (whose engine is used for this project). I think it boils down to all being "It's under copyright, but we promise to share." Cube Trains, CT, and associated branding are ©2011 and all that stuff.</p>
-			<p>By using this site, we both agree to be decent, reasonable people. Also, it's not my fault if anything bad happens because of Cube Trains. Sorry, but you'll have to use it at your own risk.</p>
-			
-		</div>
-	</body>
-</html>
+<meta http-equiv="refresh" content="0;url=https://ddr0.ca/cube trains/index.html" /><p>This site has moved to <a href="https://ddr0.ca/cube trains/index.html">ddr0.ca</a>.<br>You should be redirected there now.<br>Or something has gone wrong.</p>
