--- a/cube trains/linux compiling guide.html
+++ b/cube trains/linux compiling guide.html
@@ -1,27 +1,1 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Cube Trains</title>
-		<link rel="stylesheet" type="text/css" href="css/black.css">
-	</head>
-	<body onLoad="mixpanel.track('compiling guide load');">
-		<script type="text/javascript"> //start Mixpanel
-			(function(d,c){var a,b,g,e;a=d.createElement("script");a.type="text/javascript";a.async=!0;a.src='https://api.mixpanel.com/site_media/js/api/mixpanel.2.js';b=d.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b);c._i=[];c.init=function(a,d,f){var b=c;"undefined"!==typeof f?b=c[f]=[]:f="mixpanel";g="disable track track_pageview track_links track_forms register register_once unregister identify name_tag set_config".split(" ");
-			for(e=0;e<g.length;e++)(function(a){b[a]=function(){b.push([a].concat(Array.prototype.slice.call(arguments,0)))}})(g[e]);c._i.push([a,d,f])};window.mixpanel=c})(document,[]);
-			mixpanel.init("fa690803d8c9479ed96635dd52ea1837");
-		</script> <!-- end Mixpanel -->
-		<div id="body">
-			<h1>COMPILING</h1>
-			<p style="text-align: center;">•  <a href="media.html">Screenshots</a>  •  <a href="index.html#Downloads">Download</a>  •  <a href="index.html#Credits">Credits</a>  •<p>
-			<h2>Linux Quick-Guide</h2>
-			<p> Note: Arch Linux users may not be able to compile using the supplied makefile. Don't feel bad. It's not you, it's me.</p>
-			<h3>Steps</h3>
-			<p> ① Run, in a console, "sudo apt-get install ccache libboost-dev libboost-regex-dev libboost-system-dev libglew1.5-dev libsdl-image1.2-dev libsdl-mixer1.2-dev libsdl-ttf2.0-dev libsdl1.2-dev libz-dev libpng12-dev". This will install the dependancies of the game.</p>
-			<p> ② If you are not already in the Cube Trains folder (it'll have a file called "makefile"), navigate there. ('cd' to navigate, 'ls' to list files.)</p>
-			<p> ③ Next, run the "make" command. This should compile the game. If it doesn't say "ERROR" somewhere, then all is good. (It will print a bunch of stuff like "ccache g++ -DIMPLEMENT_SAVE_PNG -fno-inline-functions -g -O2 -fno-inline-functions bla bla bla". Don't worry, that means it's working.) If you get an error and don't know what to do, leave us a note on the <a href="http://www.frogatto.com/forum">forums</a> and we'll figure out what's wrong. Don't be shy, that's what they're there for.</p>			<p> ④ Run the game with "./game". If everything is working right, you should see the game start up. Have fun!</p>
-			<!--<h3>Errors</h3>
-			<p> ① Try running, in console, "make -f Makefile-safe" instead of "make", in step ③. This will try compiling Frogatto using only one core.</p>-->
-		</div>
-	</body>
-</html>
+<meta http-equiv="refresh" content="0;url=https://ddr0.ca/cube trains/linux compiling guide.html" /><p>This site has moved to <a href="https://ddr0.ca/cube trains/linux compiling guide.html">ddr0.ca</a>.<br>You should be redirected there now.<br>Or something has gone wrong.</p>
