--- a/images/wesnoth icons/gallery.html
+++ b/images/wesnoth icons/gallery.html
@@ -1,32 +1,1 @@
-<img src="eusa_doh.gif"></img>
-<img src="icon_annoyed.gif"></img>
-<img src="icon_arrow.gif"></img>
-<img src="icon_augh.gif"></img>
-<img src="icon_awesome.gif"></img>
-<img src="icon_biggrin.gif"></img>
-<img src="icon_confused.gif"></img>
-<img src="icon_cool.gif"></img>
-<img src="icon_cry.gif"></img>
-<img src="icon_eek.gif"></img>
-<img src="icon_e_geek.gif"></img>
-<img src="icon_eng.gif"></img>
-<img src="icon_evil.gif"></img>
-<img src="icon_exclaim.gif"></img>
-<img src="icon_idea.gif"></img>
-<img src="icon_laugh.gif"></img>
-<img src="icon_mad.gif"></img>
-<img src="icon_mrgreen.gif"></img>
-<img src="icon_neutral.gif"></img>
-<img src="icon_pensive.gif"></img>
-<img src="icon_question.gif"></img>
-<img src="icon_razz.gif       "></img>
-<img src="icon_redface.gif    "></img>
-<img src="icon_rolleyes.gif   "></img>
-<img src="icon_sad.gif        "></img>
-<img src="icon_smile2.gif     "></img>
-<img src="icon_smile.gif      "></img>
-<img src="icon_surprised.gif  "></img>
-<img src="icon_twisted.gif"></img>
-<img src="icon_whistle.gif"></img>
-<img src="icon_wink.gif"></img>
-<p><a href="http://forums.wesnoth.org/">Wesnoth Forum</a> Icons - See their disclaimer for use.</p>
+<meta http-equiv="refresh" content="0;url=https://ddr0.ca/images/wesnoth icons/gallery.html" /><p>This site has moved to <a href="https://ddr0.ca/images/wesnoth icons/gallery.html">ddr0.ca</a>.<br>You should be redirected there now.<br>Or something has gone wrong.</p>
