--- a/side projects/Descriptive Grapher.html
+++ b/side projects/Descriptive Grapher.html
@@ -1,70 +1,1 @@
-<doctype html>
-<html>
-	<head>
-		<meta charset='utf-8'>
-		<title>Descriptive Grapher</title>
-		<style>
-			footer {
-				bottom: 0;
-				position: absolute;
-				margin-bottom: 1ex;
-			}
-			progress {
-				display: none;
-			}
-			#main {
-				display: none;
-				position: relative;
-				margin-left: auto; margin-right: auto; /*center*/
-				max-width: 1000px; /*The graph becomes unwieldly befor this, even.*/
-			}
-			#graphs {
-			}
-			#outputs {
-				top: 0;
-				right: 0;
-				position: absolute;
-				max-width: 33.333%;
-				padding-top: 3px;
-			}
-			#outputs > * {
-				border-left: 2px solid black; /*might be more of a pitn than it's worth*/
-				margin-bottom: 5px;
-				padding-left: 3px;
-			}
-			#options {
-				text-align: center;
-			}
-			.formula-error {
-				box-shadow: inset 0 0 1px 1px red;
-			}
-			.cursor-move {
-				cursor: move;
-			}
-			.cursor-resize {
-				cursor: nesw-resize;
-			}
-		</style>
-		<script src="underscore 1.5.2.js"></script>
-		<script src="Descriptive Grapher.js"></script>
-	</head>
-	<body>
-		<div id="intro">
-			This page requires a modern browser with javascript enabled. <a href="http://www.mozilla.org/en-US/firefox/new/">Firefox</a> or <a href="https://www.google.com/intl/en/chrome/browser/">Chrome</a> should work out-of-the-box.
-		</div>
-		<progress id="resize"></progress>
-		<div id="main">
-			<canvas id="graphs"></canvas>
-			<div id="outputs"></div>
-			<div id="options">
-				Mouse: 
-				<input id="move" type="radio" name="group1" accesskey="m" value="Move"> <u>M</u>ove
-				<input id="scale" type="radio" name="group1" accesskey="s" value="Stretch" checked> <u>S</u>cale
-			</div>
-		</div>
-		<p>
-			Drag functions around with the mouse. Click on the equation to the side to edit. Looks to ab/cd for offset/scale values.
-		</p>
-		<footer id="footer">The Descriptive Grapher is a graph tool for those who hate graphing. It gives you a formula from a graph as well as the graph from the formula, because you need both.</footer>
-	</body>
-</html>
+<meta http-equiv="refresh" content="0;url=https://ddr0.ca/side projects/Descriptive Grapher.html" /><p>This site has moved to <a href="https://ddr0.ca/side projects/Descriptive Grapher.html">ddr0.ca</a>.<br>You should be redirected there now.<br>Or something has gone wrong.</p>
