--- a/⚂/index.html
+++ b/⚂/index.html
@@ -1,69 +1,1 @@
-<!doctype html>
-<html lang="en-IE">
-	<head>
-		<meta charset='utf-8'>
-		<title>Dice Roller</title>		
-		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-		<meta name="theme-color" content="#614c35">
-		
-		<meta name="twitter:card"          content="summary" />
-		<meta name="author"                content="DDR" />
-		<meta property="og:title"          content="DDR's Accessible Dice Roller" />
-		<meta name="twitter:title"         content="DDR's Accessible Dice Roller" />
-		<meta property="og:type"           content="website" />
-		<meta property="twitter:domain"    content="ddr0.ca" />
-		<meta property="og:url"            content="https://ddr0.ca/🎲" />
-		<meta property="twitter:url"       content="https://ddr0.ca/🎲" />
-		<meta property="og:image"          content="https://ddr0.ca/⚂/open_graph_image.jpeg" />
-		<meta name="twitter:image"         content="https://ddr0.ca/⚂/open_graph_image.jpeg" />
-		<meta property="og:image:type"     content="image/jpeg" />
-		<meta property="og:image:width"    content="601" />
-		<meta property="og:image:height"   content="379" />
-		<meta property="og:image:alt"      content="Dice Roller — Multiplayer DnD Roll Bot" />
-		<meta property="twitter:image:alt" content="Dice Roller — Multiplayer DnD Roll Bot" />
-		<meta name="description"           content="Roll game dice like &quot;1d20 + 5 to hit&quot;. Shared history, screen-reader friendly, read-aloud option. Free & open-source!" />
-		<meta property="og:description"    content="Roll game dice like &quot;1d20 + 5 to hit&quot;. Shared history, screen-reader friendly, read-aloud option. Free & open-source!" />
-		<meta name="twitter:description"   content="Roll game dice like &quot;1d20 + 5 to hit&quot;. Shared history, screen-reader friendly, read-aloud option. Free & open-source!" />
-		<meta property="og:locale"         content="en_CA" />
-		<link rel="alternate" 
-			type="application/json+oembed"
-			href="https://ddr0.ca/⚂/oembed.json"
-			title="DDR's Accessible Dice Roller" />
-		
-		<script src="/⚂/ws/socket.io.js"></script>
-		<script src="/⚂/index.js"></script>
-		<link href="/⚂/index.css" rel="stylesheet">
-	</head>
-	
-	<body>
-		<div id=content>
-			<div id=header>
-				<h1>Dice Roller</h1>
-				<sub>Multiplayer DnD Roll Bot</sub>
-			</div>
-			<div id=app>
-				<label>
-					<input id=speak type=checkbox>
-					Speak Roll Results
-				</label>
-				<form id=roll-entry>
-					<label for=game>Game Name:</label> <input id=game>
-					<label for=name>Character Name:</label> <input id=name>
-					<label for=roll>Roll:</label> <input id=roll disabled autocomplete=off placeholder="Connecting…">
-					<button disabled title="Disabled; can not contact roll server.">roll</button>
-					<p>(eg.; <code>2d10 + 1 to hit</code>)</p>
-				</form>
-				<output for=roll-entry role=log aria-relevant=additions aria-live=polite>
-					<ul>
-						<!-- rolls go here -->
-						<li id=initial-connecting-message>Connecting to roll server…</li>
-					</ul>
-				</output>
-			</div>
-		</div>
-		<div id=status>
-			<div>Status: <span>loading…</span></div>
-			<p>Based on <a href="https://github.com/GreenImp">GreenImp's</a> <a href="https://github.com/GreenImp/rpg-dice-roller">RPG Dice Roller</a>. ️❤</p>
-		</div>
-	</body>
-</html>
+<meta http-equiv="refresh" content="0;url=https://ddr0.ca/⚂/index.html" /><p>This site has moved to <a href="https://ddr0.ca/⚂/index.html">ddr0.ca</a>.<br>You should be redirected there now.<br>Or something has gone wrong.</p>
