--- a/Frogatto's Stats/error codes.html
+++ b/Frogatto's Stats/error codes.html
@@ -1,18 +1,1 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Frogatto's Standard Stats Visulizer Error Codes</title>
-		<link rel="stylesheet" type="text/css" href="black.css">
-		<script src="http://code.jquery.com/jquery-latest.js"></script>
-	</head>
-	<body>
-		<h1>Error Codes</h1>
-		<p id="proper">Since the renderer is a web app, it relies on non-local servers to give it information. Due to this, it can be rather flakey at times. Here is a list of common errors:</p>
-		<hr>
-		<p>Symptoms: Black background, white 'processing' text.</p>
-		<p>Cause: Level not loading. This is most probably because it doesn't exist on the stats server, but may also be because you've lost your internet connection.</p>
-		<hr>
-		<p><a href="level selector.html">Select a different level to render.</a></p>
-	</body>
-</html>
+<meta http-equiv="refresh" content="0;url=https://ddr0.ca/Frogattos Stats/error codes.html /><p>This site has moved to <a href=https://ddr0.ca/Frogattos Stats/error codes.html">ddr0.ca</a>.<br>You should be redirected there now.<br>Or something has gone wrong.</p>
