--- a/Oil Drop/index-mode4.html
+++ b/Oil Drop/index-mode4.html
@@ -1,48 +1,1 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Oil Drop</title>
-		<link rel="stylesheet" type="text/css" href="basic.css">
-		
-		<!-- Easel Scripts -->
-		<script src="http://code.createjs.com/easeljs-0.5.0.min.js" type="text/javascript"></script>
-		<script src="EaselColorFilter.js" type="text/javascript"></script>
-		<script src="http://code.createjs.com/tweenjs-0.3.0.min.js" type="text/javascript"></script>
-		<script src="http://code.createjs.com/soundjs-0.3.0.min.js" type="text/javascript"></script>
-		
-		<!-- Shims and helpers. (jquery included by Easel, but not soon enough) -->
-		<script src="http://code.jquery.com/jquery-latest.js"></script>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.3/underscore-min.js" type="text/javascript"></script>
-		<script src="object.watch polyfill.js" type="text/javascript"></script>
-		
-		<!-- Oil Drop -->
-		<script src="htmlInterface.js" type="text/javascript"></script>
-	</head>
-	<body onload="linkHTMLDisplayTo(mainWindow)">
-		<h1>Oil Drop</h1>
-		<div id="game">
-			<canvas id="main" width=481 height=481> <!-- Should be power of 32+1. +1 for right/bottom board edge pixel. -->
-				<p><img src="images/cc-by-sa/ails english/I_C_Lemon.png"></img><br>Oil Drop cannot be run using your current browser. Get Google's <a href="https://www.google.com/intl/en/chrome/browser/">Chrome</a> browser to fix this.</p>
-			</canvas>
-			<script type="text/javascript">
-				var iTiles = 5;
-				var iMatch = 3;
-				var iCities = 3;
-				var iMoney = 200;
-			</script>
-			<script src="main.js" type="text/javascript"></script>
-			<p id="score"> Score: 0</p> <!-- Non-breaking space for alignment. Fix later. -->
-			<p id="cash"> Cash: $200000</p>
-		</div>
-		<h2>Description</h2>
-		<p>
-			Level Three: Match three, but with all five tile types. This is the last level.
-			<br>Select a tile, and drag to like neighbours to remove. A removal costs a constant amount, so try to remove as many blocks as you can with one stroke.
-			<br>Controls: Mouse
-		</p>
-		<div id="music">
-			<iframe width="105" height="79" src="http://www.youtube.com/embed/OIW4F285QjA" frameborder="0"></iframe>
-		</div>
-	</body>
-</html>
+<meta http-equiv="refresh" content="0;url=https://ddr0.ca/Oil Drop/index-mode4.html" /><p>This site has moved to <a href="https://ddr0.ca/Oil Drop/index-mode4.html">ddr0.ca</a>.<br>You should be redirected there now.<br>Or something has gone wrong.</p>
