--- a/blog-posts/03.CreateJS_Examples/1-2 Clouds.html
+++ b/blog-posts/03.CreateJS_Examples/1-2 Clouds.html
@@ -1,61 +1,1 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset='utf-8'>
-		<title>Example 1-2: Clouds</title>
-		<script src="createjs-2013.05.14.min.js"></script>
-		<style>body {margin: 0;}</style>
-	</head>
-	<body>
-		<canvas id="output" width=300 height=150></canvas>
-		<script>
-			"use strict"
-			
-			//Create a new "stage", from the createjs library, to put our images in.
-			var stage = new createjs.Stage("output");
-			
-			//First, we'll add some containers to keep our scenery organized.
-			var backgroundContainer, sceneryContainer, actorContainer;
-			stage.addChild(backgroundContainer = new createjs.Container());
-			stage.addChild(sceneryContainer = new createjs.Container());
-			stage.addChild(actorContainer = new createjs.Container());
-			
-			//We'll add some scenery to the stage, then add an actor.
-			addLand(backgroundContainer);
-			addCloud(sceneryContainer,  0, 40);
-			addActor(actorContainer,   99, 38);
-			
-			//CreateJS comes with a "Ticker" object which fires each frame. We'll make it so that we repaint the stage each time it's called, via our stage's "update" function.
-			createjs.Ticker.addEventListener("tick", function paintStage() {
-				stage.update(); });
-			
-			//We'll add in another cloud, at a random height, every 2 seconds.
-			window.setInterval(function addClouds() {
-				addCloud(sceneryContainer, 0, Math.random()*60);
-			}, 2000);
-			
-			function addLand(stage) {
-				var land = new createjs.Bitmap("images/land.png");
-				stage.addChild(land); //The background image includes the blue sky.
-			}
-			
-			function addCloud(stage, x, y) {
-				var cloud = new createjs.Bitmap("images/cloud.png");
-				cloud.x = x, cloud.y = y;
-				stage.addChild(cloud);
-				
-				//We'll move the cloud behind the player because it looks good.
-				createjs.Ticker.addEventListener("tick", function moveCloud() {
-					cloud.x += 2;
-				});
-			}
-			
-			function addActor(stage, x, y) {
-				//All the images in this scene have been drawn from the Open Pixel Platformer. See http://www.pixeljoint.com/forum/forum_topics.asp?FID=23 for more details.
-				var actor = new createjs.Bitmap("images/male native.png");
-				actor.x = x, actor.y = y;
-				stage.addChild(actor);
-			}
-		</script>
-	</body>
-</html>
+<meta http-equiv="refresh" content="0;url=https://ddr0.ca/blog-posts/03.CreateJS_Examples/1-2 Clouds.html" /><p>This site has moved to <a href="https://ddr0.ca/blog-posts/03.CreateJS_Examples/1-2 Clouds.html">ddr0.ca</a>.<br>You should be redirected there now.<br>Or something has gone wrong.</p>
