--- a/blog-posts/08.Balancing_Braces/example.html
+++ b/blog-posts/08.Balancing_Braces/example.html
@@ -1,36 +1,1 @@
-<!doctype html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title>Brace Balancing</title>
-	</head>
-	<body>
-		<script>
-			"use strict";
-			
-			function isBalanced(braces) {
-				do {
-					var matches = braces.split(/\(\)|{}|\[]/);
-					braces = matches.join('');
-				} while (matches.length > 1);
-				return !braces;
-			}
-			
-			//Tests
-			[
-				['()', true], 
-				['{}', true], 
-				['[]', true], 
-				['()[]{}', true], 
-				['([()]{})', true], 
-				['(', false], 
-				[')', false], 
-				['(]', false], 
-				['([)]', false], 
-			].forEach(test => {
-				const balanced = isBalanced(test[0]);
-				document.write(`<span style="color:${balanced===test[1]?'lime':'red'}">'${test[0]}' → ${balanced}, should be ${test[1]}</span><br>`);
-			});
-		</script>
-	</body>
-</html>
+<meta http-equiv="refresh" content="0;url=https://ddr0.ca/blog-posts/08.Balancing_Braces/example.html" /><p>This site has moved to <a href="https://ddr0.ca/blog-posts/08.Balancing_Braces/example.html">ddr0.ca</a>.<br>You should be redirected there now.<br>Or something has gone wrong.</p>
