--- a/blog-posts/09.CSP_on_HTML_Assets.html
+++ b/blog-posts/09.CSP_on_HTML_Assets.html
@@ -1,32 +1,1 @@
-<!DOCTYPE html>
-<html lang='en'>
-	<head>
-		<meta charset='utf-8'>
-		<title>CSP_on_HTML_Assets</title>
-		<link href='/css/grey-and-blue.css' rel='stylesheet'>
-		<meta name="theme-color" content="#3377FF">
-		<link href='/css/blog.css' rel='stylesheet'>
-		<link rel="alternate" type="application/rss+xml" title="DDR's Blog" href="/blog-rss-feed.xml" />
-	</head>
-	<body>
-		<a href='#content' id='skip-nav'>skip nav</a>
-		<div id='content-holder'>
-			<div id="content-header">
-				<div id='badge'><a href="/blog.html"><img alt='' src='/images/icons/page.svg'></a></div>
-				<h1><img alt='blog' src='/images/text-blog.png'></h1>
-				<div id='icon-bar'>
-					<a href='/blog.html'    ><img src='/images/icons/page.svg' ><span>blog</span></a>
-					<a href='/gallery.html' ><img src='/images/icons/work.svg' ><span>gallery</span></a>
-					<a href='/contact.html' ><img src='/images/icons/chat2.svg'><span>contact</span></a>
-					<a href='/rss.xml'                                                               ><img src='/images/icons/rss.svg'  ><span>rss</span></a>
-				</div>
-			</div>
-			<a name='content'></a>
-			<div id='content-pane'>
-				<h2 id="CSP"><a href="09.CSP_on_HTML_Assets.html">Web Security: Should CSP be set for my HTML files only, or my HTML files and all my assets?</a></h2>
-				<p>Yes. "Some web framework automatically generate html on error pages and we found xss issues in those in the past, so setting <a href="https://developer.mozilla.org/en/docs/Web/Security/CSP">CSP</a> on everything is best." --ulfr from <a href="irc://irc.mozilla.org">Moznet</a></p>
-			</div>
-		</div>
-	</body>
-	<footer>Site ©2020 DDR.</footer>
-</html>
+<meta http-equiv="refresh" content="0;url=https://ddr0.ca/blog-posts/09.CSP_on_HTML_Assets.html" /><p>This site has moved to <a href="https://ddr0.ca/blog-posts/09.CSP_on_HTML_Assets.html">ddr0.ca</a>.<br>You should be redirected there now.<br>Or something has gone wrong.</p>
