--- a/contact.html
+++ b/contact.html
@@ -1,32 +1,1 @@
-<!DOCTYPE html>
-<html lang='en'>
-	<head>
-		<meta charset='utf-8'>
-		<title>Contact</title>
-		<link href='/css/grey-and-blue.css' rel='stylesheet'>
-		<meta name="theme-color" content="#3377FF">
-		
-	</head>
-	<body>
-		<a href='#content' id='skip-nav'>skip nav</a>
-		<div id='content-holder'>
-			<div id="content-header">
-				<div id='badge'><img alt='' src='/images/icons/chat2.svg'></div>
-				<h1><img alt='contact' src='/images/text-contact.png'></h1>
-				<div id='icon-bar'>
-					<a href='/blog.html'    ><img src='/images/icons/page.svg' ><span>blog</span></a>
-					<a href='/gallery.html' ><img src='/images/icons/work.svg' ><span>gallery</span></a>
-					<a href='/contact.html' class='selected'><img src='/images/icons/chat2.svg'><span>contact</span></a>
-					<a href='/rss.xml'                                                               ><img src='/images/icons/rss.svg'  ><span>rss</span></a>
-				</div>
-			</div>
-			<a name='content'></a>
-			<div id='content-pane'>
-				<p>You can reach me at d@ddr0.com, on Github as DDR0, or on Discord as DDR#0001.</p>
-					
-					<p>See also: <a href="/files/personal/resume.pdf">my resume</a>.</p>
-			</div>
-		</div>
-	</body>
-	<footer>Site ©2020 DDR.</footer>
-</html>
+<meta http-equiv="refresh" content="0;url=https://ddr0.ca/contact.html" /><p>This site has moved to <a href="https://ddr0.ca/contact.html">ddr0.ca</a>.<br>You should be redirected there now.<br>Or something has gone wrong.</p>
