--- a/cube trains/download linux.html
+++ b/cube trains/download linux.html
@@ -1,44 +1,1 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Cube Trains</title>
-		<link rel="shortcut icon" href="/images/favicon.png">
-		<link rel="stylesheet" type="text/css" href="css/black.css">
-		<link rel="stylesheet" type="text/css" href="css/download.css">
-	</head>
-	<body onLoad="mixpanel.track('download lin load');">
-		<script type="text/javascript"> //start Mixpanel
-			(function(d,c){var a,b,g,e;a=d.createElement("script");a.type="text/javascript";a.async=!0;a.src='https://api.mixpanel.com/site_media/js/api/mixpanel.2.js';b=d.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b);c._i=[];c.init=function(a,d,f){var b=c;"undefined"!==typeof f?b=c[f]=[]:f="mixpanel";g="disable track track_pageview track_links track_forms register register_once unregister identify name_tag set_config".split(" ");
-			for(e=0;e<g.length;e++)(function(a){b[a]=function(){b.push([a].concat(Array.prototype.slice.call(arguments,0)))}})(g[e]);c._i.push([a,d,f])};window.mixpanel=c})(document,[]);
-			mixpanel.init("fa690803d8c9479ed96635dd52ea1837");
-			mixpanel.track_links("a#deb-download",			"deb download",				{'referrer': document.referrer });
-			mixpanel.track_links("a#lin-make-download",		"linux make download",		{'referrer': document.referrer });
-			mixpanel.track_links("a#ebuild-download",		"ebuild download",			{'referrer': document.referrer });
-			mixpanel.track_links("a#source-download",		"source download",			{'referrer': document.referrer });
-		</script> <!-- end Mixpanel -->
-		<div id="body">
-			<h1>Linux Download</h1>
-			<p style="text-align: center;">•  <a href="media.html">Screenshots</a>  •  <a href="index.html">Main Page</a>  •  <a href="index.html#Credits">Credits</a>  •<p>
-			<!--<p>Linux users must compile Cube Trains from the <a id="source-download" href="https://github.com/frogatto/frogatto/archive/ct-1.0.0.zip">source</a>, at the moment. There is an old <a href="linux compiling guide.html">compiling guide</a> which may still work, or at least provide a good starting point. Sorry for the inconvenience.</p>
-			<p>In addition, it has been discovered that under most linux distros, the editor's "copy to clipboard" feature is miserably broken. Unfortunantly, I am unable to find a fix for this. The workaround for this is to:<br>1) Run the game from the console.<br>2) Copy level to clipboard, like normal. <br>3) Press ctrl-d to bring up the debug console, ctrl-v to paste the level into it, and then press the enter key to evaluate it. (Has the side-effect of printing it to console.)<br>4) Copy the level from the console window. Note that you will now have to restart the game before pasting anything.</p>-->
-			<p>There is an installation script of sorts available for ubuntu 12.04.1 LTS. It may work with newer versions of Ubuntu, or other Ubuntu-like flavours of Linux. To install the game, run install.sh and follow the prompts. This download includes the source code, so in the event that the installer fails the game can still be compiled by hand.</p>
-			<p><strong>The editor has been disabled</strong> for Linux due to the copy/paste feature not working.</p>
-			<div class="buttonContainer">
-				<a id="lin-make-download" class="shinyButton" href="https://ddr0.ca/files/release/linux/ct-1.0.0 Ubuntu 12.04.1 LTS.tar.gz">ct-1.0.0 installer</a>
-				<p class="buttonSubtext">Installer for Ubuntu<br>12.04.1 LTS</p>
-			</div>
-			<div style="clear: both;"></div>
-			<p>Step 1: Extract the files.</p>
-			<p>Step 2: Mark the "install.sh" script as executable.
-			<img src="images/linux install/ct-install-1.png" style="max-width: 100%; text-align: center;">
-			<img src="images/linux install/ct-install-2.png" style="max-width: 100%; text-align: center;">
-			<img src="images/linux install/ct-install-3.png" style="max-width: 100%; text-align: center;"></p>
-			<p>Step 3: Double-click the script to run it. Select 'run in terminal.
-			<img src="images/linux install/ct-install-4.png" style="max-width: 100%; text-align: center;"></p>
-			<p>Step 4: Follow the installation instructions. (This may take on the order of 'an hour' for older computers.)
-			<img src="images/linux install/ct-install-5.png" style="max-width: 100%; text-align: center;"></p>
-			<p>Now you can run the game whenever you want! Just double-click the file called "game" that has been created. Have fun!</p>
-		</div>
-	</body>
-</html>
+<meta http-equiv="refresh" content="0;url=https://ddr0.ca/cube trains/download linux.html" /><p>This site has moved to <a href="https://ddr0.ca/cube trains/download linux.html">ddr0.ca</a>.<br>You should be redirected there now.<br>Or something has gone wrong.</p>
