--- a/cube trains/download windows.html
+++ b/cube trains/download windows.html
@@ -1,25 +1,1 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Cube Trains</title>
-		<link rel="shortcut icon" href="/images/favicon.png">
-		<link rel="stylesheet" type="text/css" href="css/black.css">
-		<link rel="stylesheet" type="text/css" href="css/download.css">
-	</head>
-	<body onLoad="mixpanel.track('download windows load');">
-		<script type="text/javascript"> //start Mixpanel
-			(function(d,c){var a,b,g,e;a=d.createElement("script");a.type="text/javascript";a.async=!0;a.src='https://api.mixpanel.com/site_media/js/api/mixpanel.2.js';b=d.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b);c._i=[];c.init=function(a,d,f){var b=c;"undefined"!==typeof f?b=c[f]=[]:f="mixpanel";g="disable track track_pageview track_links track_forms register register_once unregister identify name_tag set_config".split(" ");
-			for(e=0;e<g.length;e++)(function(a){b[a]=function(){b.push([a].concat(Array.prototype.slice.call(arguments,0)))}})(g[e]);c._i.push([a,d,f])};window.mixpanel=c})(document,[]);
-			mixpanel.init("fa690803d8c9479ed96635dd52ea1837");
-		mixpanel.track_links("a#windows-download-32",	"windows download 32",			{'referrer': document.referrer });
-		mixpanel.track_links("a#windows-download-64",	"windows download 64",			{'referrer': document.referrer });
-		</script> <!-- end Mixpanel -->
-		<div id="body">
-			<h1>Windows Download</h1>
-			<p style="text-align: center;">•  <a href="media.html">Screenshots</a>  •  <a href="index.html">Main Page</a>  •  <a href="index.html#Credits">Credits</a>  •<p>
-			<h2>Installer</h2>
-			<a id="windows-download-32" class="shinyButton" href = "https://ddr0.ca/files/release/win/Cube Trains 1.0.0.exe">Cube Trains 1.0.0.exe</a>
-		</div>
-	</body>
-</html>
+<meta http-equiv="refresh" content="0;url=https://ddr0.ca/cube trains/download windows.html" /><p>This site has moved to <a href="https://ddr0.ca/cube trains/download windows.html">ddr0.ca</a>.<br>You should be redirected there now.<br>Or something has gone wrong.</p>
