--- a/side projects/cfl/manual.html
+++ b/side projects/cfl/manual.html
@@ -1,203 +1,1 @@
-<!doctype html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title>Manual for CFL 2.0.3</title>
-	</head>
-	<body>
-		<h1>Manual for CFL 2.0.3</h1>
-		<h2>Introduction</h2>
-		<p>ComeFrom Language is an estoric programming language. It explores what is possible given only the most unwieldy of flow control operators, 'comefrom' and 'comefromif'. While the idea is <a href="http://en.wikipedia.org/wiki/COMEFROM">certainly not unique</a>, nor at <a href="http://c2.com/cgi/wiki?ComeFrom">40 years of age</a> <em>new</em>, it has previously lacked some accessibility. Any language implementing it, such as <a href="http://en.wikipedia.org/wiki/INTERCAL">INTERCAL</a>, has way too much cruft to let you focus on the problem of comefrom. CFL therefore features a minimal stack-based language which is easy to learn and read, and <a href="..">a nice web-based IDE</a> to program in.</p>
-		<h2>Syntax</h2>
-		<p>Every command must have a line number, then a value or a command. CFL is a stack-based language, and values and commands all use the same first-in, last-out stack.</p>
-		<p>Values are pushed to the stack, from which commands will take them and process them. To put a string on the stack, preface it with a $. To put a number on the stack, preface it with a #. Example: The program <code>10 #3.14</code> puts the number 3.14 on the stack. Note: It is only customary for the lines to appear in order in the source code, not required.</p>
-		<p>There are two types of commands. Normal commands, when run, take their arguments off the top of the stack and put their return values on the stack when they're done. Infix commands, however, are put on the operator stack while they wait for more arguments. For example, the divider operator, /, is an infix command. Running <code>10 #2, 20 /, 30 #4</code> would leave the value of 0.5 on the stack. <code>10 $hello, 20 +, 30 $ there</code> would leave "hello there" on the stack.
-		<p>Comefrom and comefromif are special cases, and are written as <code>10 comefrom 20</code>.</p>
-		<p>Comments are written as <code>10 !this is a comment</code>.</p>
-		<p>If two or more instructions share a line number, one is chosen at random each time that line is executed. <code>10 comefrom 20, 20 #0, 20 #1</code> will push 0s and 1s to the stack.</p>
-		<p>A statement is terminated by a comma or a newline, unless preceded by a comma. In that case, the preceding comma will be removed from the program. Most of the examples here use commas for compactness.</p>
-		<h2>Commands</h2>
-		<table>
-			<tr>
-				<th colspan="3">Math Operators</th>
-			</tr>
-			<tr>
-				<td>+, -, *, /, %</td>
-				<td>Infix operators. Add, subtract, multiply, divide, or take the modulo of the next number to be pushed to the stack with the number currently on the stack. Only addition works with strings, concatenating them.</td>
-				<td><code>10 2, 20 /, 30 4</code> → [0.5]</td>
-			</tr>
-			<tr>
-				<td>&lt;, =, &gt;</td>
-				<td>Infix operators. Compare the number currently on the stack with the next to be put on the stack, returning 1 if the assertion was true and 0 if not.</td>
-				<td><code>10 2, 20 &lt;, 30 4</code> → [1]</td>
-			</tr>
-			<tr>
-				<td>^</td>
-				<td>Infix operator. Raise the number on the stack to the power of the next number to be put on the stack.</td>
-				<td><code>10 2, 20 ^, 30 4</code> → [16]</td>
-			</tr>
-			<tr>
-				<td>calljs</td>
-				<td>Call a javascript function. For example, take the stack ['Enter your password:', 1, 'prompt&lt;window']. When calljs is executed it will prompt the user to enter their password and put the result on the stack. The newest value on the stack is the name of the function to call. eg; 'prompt&lt;window' calls Javascript's window.prompt function. The number indicates the arity of the function, and then pops that many variables off the stack to feed to the function. A value which is not a number, boolean, or string is interpreted as nil. See also: readjs</td>
-				<td><pre><code>10 $Enter your password:
-20 #1
-30 $prompt&lt;window
-40 calljs</code></pre> → [$my_password]</td>
-			</tr>
-			<tr>
-				<td>comefrom</td>
-				<td>Come from a line number to this line.</td>
-				<td><code>10 $cfl , 20 comefrom 40, 30 dup, 40 print</code> prints "cfl" repeatedly</td>
-			</tr>
-			<tr>
-				<td>comefromif</td>
-				<td>Comes from a line number to this line, IF the top value on the stack is truthy. The value is not removed from stack. Truthy values are anything other than #0, $, nul, or the empty stack.</td>
-				<td><code>10 #5, 20 comefromif 40, 30 -, 40 #1</code> → [0]</td>
-			</tr>
-			<tr>
-				<td>depth</td>
-				<td>Puts the size of the stack prior to the instruction to the stack.</td>
-				<td><code>10 #100, 20 #101, 30 depth</code> → [#100, #101, #2]</td>
-			</tr>
-			<tr>
-				<td>drop</td>
-				<td>Removes the first value on the stack.</td>
-				<td><code>10 #5, 20 drop</code> → []</td>
-			</tr>
-			<tr>
-				<td>dup</td>
-				<td>Takes the first value on the stack and adds it to the stack twice, duplicating it.</td>
-				<td><code>10 $test1, 20 $test2, 30 drop</code> → [$test1]</td>
-			</tr>
-			<tr>
-				<td>log</td>
-				<td>Pop a value to stack, and print it to the javascript console. See also: print, println</td>
-				<td><code>10 #2, 20 log</code> → []</td>
-			</tr>
-			<tr>
-				<td>nop</td>
-				<td>Take no action. Very easy to implement!</td>
-				<td><code>10 nop</code> → []</td>
-			</tr>
-			<tr>
-				<td>not</td>
-				<td>Logically negate the first value on the stack. (In CFL, truthy values are anything other than #0, $, or nul.)</td>
-				<td><code>10 "hello", 20 not</code> → [0]</td>
-			</tr>
-			<tr>
-				<td>num</td>
-				<td>Cast the top value on the stack to a number. See also: str</td>
-				<td><code>10 $512, 20 num</code> → [#512]</td>
-			</tr>
-			<tr>
-				<td>print</td>
-				<td>Print and remove the top value of the stack. See also: log, println</td>
-				<td><code>10 $hi, 20 print</code> → []</td>
-			</tr>
-			<tr>
-				<td>println</td>
-				<td>Print and remove the top value of the stack. Advance the cursor to a new line. See also: log, print</td>
-				<td><code>10 $hi, 20 println</code> → []</td>
-			</tr>
-			<tr>
-				<td>reach</td>
-				<td>Reach back in the stack, read a value, and push the read value to the stack. Does not remove the read value. <code>10 #5, 20 #1, 30 reach</code> is equivalent to <code>10 #5, 20 dup</code>.</td>
-				<td><code>10 $A, 20 $C, 30 $D, 40 #2, 50 reach</code> → [$A, $C, $D, $C]</td>
-			</tr>
-			<tr>
-				<td>readjs</td>
-				<td>Read a javascript value as given by the js path string on top of the stack. For example, to read Math.PI, we'd push $PI&lt;Math to the stack and then invoke readjs. See also: calljs</td>
-				<td><code>10 $PI&lt;Math, 20 readjs</code> → [#3.141592653589793]</td>
-			</tr>
-			<tr>
-				<td>str</td>
-				<td>Cast the top value on the stack to a string. See also: num</td>
-				<td><code>10 #512, 20 str</code> → [$512]</td>
-			</tr>
-			<tr>
-				<td>swap</td>
-				<td>Reverse the position of the top two values on the stack.</td>
-				<td><code>10 #1, 20 #2, 30 swap</code> → [#2, #1]</td>
-			</tr>
-		</table>
-
-		<!--<h2>Remarks</h2>
-		<p>SUBROUTINES: First set a /return variable/. Then, comefrom the start of the subroutine. When the routine has ran, leaving whatever value on the stack, reach the return variable. Compare it with a possible return variable (you'll need a different var for each call site). Comefromif back to the call site, swap and drop the comparison value, and there you go?</p>-->
-
-		<h2>Examples</h2>
-		<caption>Dividing Two Numbers</caption>
-		<pre><code>10 #1
-20 /
-30 #2
-40 print</code></pre>
-
-		<caption>Skipping a Command</caption>
-		<pre><code>10 $a
-20 $b
-30 $c
-40 comefrom 20
-50 log</code></pre>
-
-		<caption>Adding Three Numbers</caption>
-		<pre><code>10 #5
-20 #3
-30 +
-40 +
-50 #4</code></pre>
-
-		<caption>Counting Up to Ten</caption>
-		<pre><code>10 #0
-20 comefrom 120
-30 +
-40 #1
-50 dup
-55 dup
-60 &lt;
-70 #10
-80 drop
-100 comefromif 75
-120 drop
-130 comefrom 90
-145 drop</code></pre>
-
-
-		<caption>99 Bottles of Beer</caption>
-		<pre><code>0 !99 Bottles v1.0.0
-10 #99
-19 nul
-20 comefromif 205
-21 drop
-30 dup
-40 str
-45 dup
-50 + 
-60 $ bottles of beer on the wall,,
-70 println
-80 +
-90 $ bottles of beer.\nTake one down,, pass it around,,
-100 println
-120 -
-130 #1
-140 dup
-145 swap
-150 str
-155 +
-160 $ bottles of beer on the wall.\n
-170 println
-180 dup
-190 >
-200 #2
-215 $1 bottle of beer on the wall,,\n1 bottle of beer.
-214 $Take one down,, pass it around,,\nno more bottles of beer on the wall.\n
-213 $No more bottles of beer on the wall,,\nno more bottles of beer.
-212 $Go to the store,, buy some more,,
-211 $99 bottles of beer on the wall.\n
-210 $... oh fine I'll stop now.
-218 !loop until we've printed the entire stack we just filled
-219 comefromif 220
-220 println</code></pre>
-
-		<h2>Language Proposals</h2>
-		<p>How about a return statement, gotoing the last line we camefrom? That would allow truly invisible flow.</p>
-	</body>
-</html>
+<meta http-equiv="refresh" content="0;url=https://ddr0.ca/side projects/cfl/manual.html" /><p>This site has moved to <a href="https://ddr0.ca/side projects/cfl/manual.html">ddr0.ca</a>.<br>You should be redirected there now.<br>Or something has gone wrong.</p>
