--- a/side projects/fluid experiment/fluid.html
+++ b/side projects/fluid experiment/fluid.html
@@ -1,18 +1,1 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Fluid Test</title>
-		<link rel="stylesheet" type="text/css">
-		<script src="../libs/lodash 2.4.1.js"></script>
-	</head>
-	<body>
-		<h1>Fluid Simulation Experiment</h1>
-		<canvas 
-			id="canvas" 
-			width="1000" height="500"           comment="This will be doubled for retina displays in JS."
-			style="width:1000px; height:500px;" comment="This won't be."
-		>No display available. :< </canvas>
-		<script src="fluid.js"></script>
-	</body>
-</html>
+<meta http-equiv="refresh" content="0;url=https://ddr0.ca/side projects/fluid experiment/fluid.html" /><p>This site has moved to <a href="https://ddr0.ca/side projects/fluid experiment/fluid.html">ddr0.ca</a>.<br>You should be redirected there now.<br>Or something has gone wrong.</p>
