--- a/side projects/mcnugget-madness/dinger.html
+++ b/side projects/mcnugget-madness/dinger.html
@@ -1,92 +1,1 @@
-<!-- Image from https://www.google.ca/search?q=picture+of+one+mcnugget&client=ubuntu&hs=BZp&channel=fs&tbm=isch&source=iu&imgil=V172b48s2BD3DM%253A%253Bhttps%253A%252F%252Fencrypted-tbn2.gstatic.com%252Fimages%253Fq%253Dtbn%253AANd9GcTR4_gXGNUU5XoISzMi3WyATDuB0EDjNCB4vZX4mljVcQ1twO8o%253B290%253B400%253BXsvTVRcbXBzHmM%253Bhttp%25253A%25252F%25252Fwww.always-drunk.com%25252F2011%25252F06%25252Fmcnugget-jones.html&sa=X&ei=UHjmUrvpB4XfoATPjoKIAg&ved=0CDIQ9QEwAg -->
-<!-- Made for a stupid McNugget-eating event. Oh, tired ideas… -->
-<html>
-	<head>
-		<meta charset='utf-8' />
-		<title>McNugget Dinger</title>
-		
-		<!-- Try to make double-tap not zoom. Mostly fails. -->
-		<meta name="HandheldFriendly" content="True" />
-		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-		<meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, target-densitydpi=device-dpi" />
-		
-		<script src="/socket.io/socket.io.js:8077"></script>
-		<script src="socket.js"></script>
-		
-		<style>
-			body {
-				background-color: #d80019;
-				text-align: center;
-				margin: 2em;
-				margin-top: 1em;
-				/*background-image: url('banner.jpg');*/
-				background-repeat: no-repeat;
-				color: white;
-				font-family: sans-serif;
-			}
-			h1 {
-				font-family: Impact, Charcoal, sans-serif;
-			}
-			#nugget {
-				max-width: 100%;
-				width: 500px;
-			}
-			#undo {
-				position: absolute;
-				right: 1ex;
-				bottom: 1ex;
-			}
-			#stupidityCount {
-				font-size: 200px;
-				color: #faa90f; /*goldenarch, goldenrod is a bit different :( */
-			}
-			#login {
-				position: fixed;
-				left: 1ex;
-				bottom: -1ex;
-			}
-		</style>
-		
-		<script>
-			var round = 1;
-		</script>
-	</head>
-	<body>
-		<h1>Nuggets Eaten</h1>
-		<div>
-			<button id="nugget" width="234" height="305"><img src="nugget.jpg" alt="+1" width="231" height="302"></button>
-			<br>
-			<button id="undo">Uncount</button>
-		</div>
-		<strong id="stupidityCount">0</strong>
-		<div id="ding"></div>
-		
-		<script>
-			//Add logged in message at bottom.
-			document.body.innerHTML += "<p id='login'>Logged in as " + (localStorage.name||'nobody. (Your nugget count will not be recorded for posterity.)') + "</p>"
-		</script>
-		
-		<script>
-			//Set callbacks for buttons.
-			document.getElementById('stupidityCount').innerHTML = localStorage[round] = localStorage[round] || 0;
-			
-			var increment = function(event) {
-				event.preventDefault();
-				document.getElementById('stupidityCount').innerHTML = ++localStorage[round];
-				socket.emit('set-nugget-count', {name: localStorage.name, count: localStorage[round]});
-				//document.getElementById('ding').innerHTML = '<audio src="ding.mp3" volume="1" muted="0" autoplay="1" />'
-				//document.getElementById('ding').innerHTML += '<audio src="ding.ogg" volume="1" muted="0" autoplay="1" />'
-			};
-			
-			document.getElementById('nugget').addEventListener('click', increment);
-			document.getElementById('stupidityCount').addEventListener('click', increment);
-			
-			document.getElementById('undo').addEventListener('click', function(event) {
-				event.preventDefault();
-				document.getElementById('stupidityCount').innerHTML = localStorage[round] = Math.max(localStorage[round]-1, 0);
-				socket.emit('set-nugget-count', {name: localStorage.name, count: localStorage[round]});
-			});
-		</script>
-	</body>
-</html>
+<meta http-equiv="refresh" content="0;url=https://ddr0.ca/side projects/mcnugget-madness/dinger.html" /><p>This site has moved to <a href="https://ddr0.ca/side projects/mcnugget-madness/dinger.html">ddr0.ca</a>.<br>You should be redirected there now.<br>Or something has gone wrong.</p>
